# HexEditor

./: .gitignore  CMakeLists.txt  HexEditor.pro  gotodialog.cpp  gotodialog.h  gotodialog.ui  hexwidget.cpp  hexwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  selection.cpp  selection.h
src/: gotodialog.cpp  gotodialog.h  hexwidget.cpp  hexwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
